--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -1,5 +1,5 @@
 <footer>
-  <p>You Got This is a community conference series coordinated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>. If you have questions feel free to reach out to <a href="mailto:kevin@yougotthis.io">kevin@yougotthis.io</a>.</p>
+  <p>You Got This is a community conference series coordinated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>. Code for this site is on <a href="https://github.com/yougotthisconf/yougotthis.io">GitHub</a>.</p>
 </footer>
 
 <style>
