--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&family=IBM+Plex+Sans:wght@700&display=swap">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✊</text></svg>">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta property="og:image" content="https://yougotthis.io/assets/img/og.png">
     <meta name="description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
