--- a/src/_includes/home_top.liquid
+++ b/src/_includes/home_top.liquid
@@ -15,6 +15,7 @@
 <div id="desc">
   <p>Together we can skill up and become more sucessful in our professional and personal lives. Our events create spaces where people in tech can talk about the thoughts, feelings and concerns they have, and learn about how to approach and overcome them. Whatever your background or experience level, these topics simply don't get spoken about enough and we want that to change. Our goal is to create a robust bank of resources for people to learn the skills needed for a happy, healthy work life.</p>
   <p>Our events focus around 7 overarching themes: professional development, self care, working with others, ethics in tech, self advocacy, how to best support your teams as managers and diversity, accessibility & inclusion in our industry.</p>
+  <p>There are currently four events in our network - You Got This UK, Adulting.Dev in New York City, HumansConf in Frankfurt, Germany, and You Got This: From Home which takes place online.</p>
 </div>
 
 <style>
