--- a/src/_includes/home_top.liquid
+++ b/src/_includes/home_top.liquid
@@ -7,6 +7,7 @@
     <a href="https://dev.to/yougotthisconf">Blog</a>
     <a href="https://buttondown.email/yougotthisconf">Newsletter</a>
     <a href="mailto:yougotthis@lws.io">Email</a>
+    <a href="/discord">Join Discord Community</a>
     <a href="/conduct">Code of Conduct</a>
     <a href="/run">Run Your Own</a>
   </div>
