talks ordered by title

--- a/src/_includes/home_talks.liquid
+++ b/src/_includes/home_talks.liquid
@@ -1,7 +1,7 @@
 <div id="talks">
   <h1>Talks From Previous Events</h1>
   <div class='list'>
-    {% for resource in collections.talk %}
+    {% for resource in collections.resources %}
       <a class="resource" href="{{resource.data.page.url}}">
         <h2>{{resource.data.talk.title}}</h2>
         <p>
