--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -22,7 +22,7 @@ layout: base
       <section>
         <h2>About the talk</h2>
         <p class='abstract'>{{talk.abstract}}</p>
-        {% include tag_list, tags: tags %}
+        {% include tag_list, tags: tags, links: true %}
       </section>
       <section>
         <h2>About the speaker</h2>
