--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -33,7 +33,7 @@ layout: base
       </section>
       {% if notes %}
         <section>
-          <h2>Notes</h2>
+          <h2>Notes & resources</h2>
           {{notes}}
         </section>
       {% endif %}
