--- a/src/pages/home.liquid
+++ b/src/pages/home.liquid
@@ -7,7 +7,7 @@ permalink: /
 <div id="home">
   {% include home_top %}
   {% include home_photos %}
-  {% comment %} {% include home_upcoming %} {% endcomment %}
+  {% include home_upcoming %}
   {% include talks_list, title: 'Talks From Previous Events' %}
   {% include home_sponsors %}
 </div>
