Past events tiles

--- a/src/pages/home.liquid
+++ b/src/pages/home.liquid
@@ -10,4 +10,5 @@ permalink: /
   {% include home_upcoming %}
   {% include talks_list, title: 'Talks From Previous Events' %}
   {% include home_sponsors %}
+  {% include home_past %}
 </div>
