More consistent styling between sections on home

--- a/src/_includes/home_past.liquid
+++ b/src/_includes/home_past.liquid
@@ -24,7 +24,7 @@
   list-style: none;
 }
 #past li {
-  background: var(--orange);
+  background: var(--pink__light);
   padding: 1em;
   border-radius: 0.5em;
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
