--- a/src/_includes/home_sponsors.liquid
+++ b/src/_includes/home_sponsors.liquid
@@ -20,11 +20,28 @@
   grid-gap: 0.5em;
   background: white;
   padding: 1em;
+  border-radius: 0.5em;
+  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
 }
 #sponsors img {
   display: block;
   width: 100%;
 }
+
+#sponsors img:first-child {
+  border-top-left-radius: 0.3em;
+}
+#sponsors img:nth-child(6) {
+  border-top-right-radius: 0.3em;
+}
+#sponsors img:nth-last-child(6) {
+  border-bottom-left-radius: 0.3em;
+}
+#sponsors img:last-child {
+  border-bottom-right-radius: 0.3em;
+}
+
+
 @media screen and (max-width: 1000px) {
   #sponsors .list {
     grid-template-columns: repeat(4, 1fr);
