--- a/src/_includes/home_upcoming.liquid
+++ b/src/_includes/home_upcoming.liquid
@@ -26,6 +26,8 @@
   background: var(--blue);
   padding: 1em;
   color: white;
+  border-radius: 0.5em;
+  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
 }
 
 #upcoming .event:not(:last-child) {
