--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -18,6 +18,7 @@
     <meta name="og:description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
   </head>
   <body>
+    {% include header %}
     <div class="page wrapper">
       {{content | safe}}
     </div>
