Updated PR link for talks

--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -13,7 +13,7 @@ layout: base
   <main>
     <article>
       <h2>Transcript</h2>
-      <small>These transcripts were captured live by a captioner. As such, there may be small errors. If you spot any, please feel free to <a href="https://github.com/yougotthisconf/yougotthis.io/tree/master/{{page.inputPath}}">submit a pull request</a> with amendments.</small>
+      <small>These transcripts were captured live by a captioner. As such, there may be small errors. If you spot any, please feel free to <a href="https://github.com/yougotthisconf/yougotthis.io/tree/main/{{page.inputPath}}">submit a pull request</a> with amendments.</small>
       {{content}}
     </article>
     <aside>
