--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -141,8 +141,18 @@ layout: base
   }
 </style>
 
+<script src="/assets/hls.js"></script>
 <script src="/assets/video.js"></script>
 <link href="/assets/video.css" rel="stylesheet" />
 <script>
+const video = document.getElementById('video')
+const url = 'https://stream.mux.com/{{video}}.m3u8'
+if (video.canPlayType('application/vnd.apple.mpegurl')) {
+  video.src = url;
+} else if (Hls.isSupported()) {
+  hls = new Hls();
+  hls.loadSource(url);
+  hls.attachMedia(video);
+}
 videojs('video', { playbackRates: [0.5, 1, 1.5, 2] });
 </script>
