--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -8,9 +8,7 @@ layout: base
     <p>Presented by {{speaker.name}} at {{event}}</p>
   </div>
 
-  <video id='video' class="video-js" controls preload="metadata" data-setup="{}" poster="https://image.mux.com/{{video}}/thumbnail.png"> 
-    <source src="https://stream.mux.com/{{video}}.m3u8" type="video/x-mpegURL" />
-  </video>
+  <video id='video' controls></video>
 
   <main>
     <article>
@@ -55,7 +53,7 @@ layout: base
     margin-top: 1rem;
   }
 
-  #talk .video-js {
+  #talk video {
     margin-top: 2.5rem;
     width: 100%;
     height: 590px;
@@ -99,20 +97,20 @@ layout: base
     margin-bottom: 1em;
   }
 
-  .video-js .vjs-big-play-button {
+  video .vjs-big-play-button {
     top: 50% !important; 
     margin-top: calc(-1.63332em/2) !important;
     left: 50% !important;
     margin-left: calc(-3em/2) !important;
     background: var(--blue) !important;
   }
-  .video-js:hover .vjs-big-play-button, 
-  .video-js .vjs-big-play-button:focus {
+  video:hover .vjs-big-play-button, 
+  video .vjs-big-play-button:focus {
     background: var(--blue__dark) !important;
   }
 
   @media screen and (max-width: 1000px) {
-    #talk .video-js {
+    #talk video {
       height: 54vw;
     }
   }
@@ -121,7 +119,7 @@ layout: base
     #top h1 {
       font-size: 2em;
     }
-    #talk .video-js {
+    #talk video {
       margin-top: 3em;
     }
     #talk main {
@@ -142,8 +140,6 @@ layout: base
 </style>
 
 <script src="/assets/hls.js"></script>
-<script src="/assets/video.js"></script>
-<link href="/assets/video.css" rel="stylesheet" />
 <script>
 const video = document.getElementById('video')
 const url = 'https://stream.mux.com/{{video}}.m3u8'
@@ -154,5 +150,4 @@ if (video.canPlayType('application/vnd.apple.mpegurl')) {
   hls.loadSource(url);
   hls.attachMedia(video);
 }
-videojs('video', { playbackRates: [0.5, 1, 1.5, 2] });
 </script>
