Updated metadata mux data

--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -158,7 +158,7 @@ if (typeof mux !== 'undefined') {
     hlsjs: hls,
     data: { 
       env_key: 'ebv8g7tenqkgho0bfb8ggg1s9',
-      talk_name: '{{talk.title}}'
+      video_title: '{{talk.title}}'
     }
   })
 }
