--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -8,8 +8,7 @@ layout: base
     <p>Presented by {{speaker.name}} at {{event}}</p>
   </div>
 
-  <script>window.muxPlayerInitTime = Date.now()</script>
-  <video id='video' controls preload="metadata"></video>
+  <video id='video' controls playsinline preload="metadata"></video>
 
   <main>
     <article>
@@ -54,10 +53,13 @@ layout: base
     margin-top: 1rem;
   }
 
+  #talk .plyr {
+    margin-top: 2.5em;
+    --plyr-color-main: var(--pink)
+  }
+
   #talk video {
-    margin-top: 2.5rem;
     width: 100%;
-    height: 590px;
   }
 
   #talk main {
@@ -98,21 +100,9 @@ layout: base
     margin-bottom: 1em;
   }
 
-  video .vjs-big-play-button {
-    top: 50% !important; 
-    margin-top: calc(-1.63332em/2) !important;
-    left: 50% !important;
-    margin-left: calc(-3em/2) !important;
-    background: var(--blue) !important;
-  }
-  video:hover .vjs-big-play-button, 
-  video .vjs-big-play-button:focus {
-    background: var(--blue__dark) !important;
-  }
-
   @media screen and (max-width: 1000px) {
-    #talk video {
-      height: 54vw;
+    #talk .plyr {
+      height: calc(59vw - 2em);
     }
   }
 
@@ -120,8 +110,8 @@ layout: base
     #top h1 {
       font-size: 2em;
     }
-    #talk video {
-      margin-top: 3em;
+    #talk .plyr {
+      margin-top: 2.5em;
     }
     #talk main {
       grid-template-columns: 1fr;
@@ -140,26 +130,26 @@ layout: base
   }
 </style>
 
+<link rel="stylesheet" href="/assets/plyr.css" />
 <script src="/assets/hls.js"></script>
-<script src="/assets/mux.js"></script>
+<script src="/assets/plyr.js"></script>
 <script>
+document.addEventListener('DOMContentLoaded', () => {
+  const source = 'https://stream.mux.com/{{video}}.m3u8'
+  const video = document.querySelector('#video')
+  
+  // video['data-poster'] = video.poster = ''
+  const player = new Plyr(video)
 
-const video = document.querySelector('#video')
-const url = 'https://stream.mux.com/{{video}}.m3u8'
-video.poster = 'https://image.mux.com/{{video}}/thumbnail.png'
+  if(!Hls.isSupported()) {
+    video.src = source
+  } else {
+    let hls = new Hls();
+    hls.loadSource(source);
+    hls.attachMedia(video);
+    window.hls = hls;
+  }
 
-let hls = new Hls();
-hls.loadSource(url);
-hls.attachMedia(video);
-
-if (typeof mux !== 'undefined') {
-  mux.monitor('#video', {
-    debug: true,
-    hlsjs: hls,
-    data: { 
-      env_key: 'ebv8g7tenqkgho0bfb8ggg1s9',
-      video_title: '{{talk.title}}'
-    }
-  })
-}
+  window.player = player
+})
 </script>
