Added monetization header

--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://yougotthis.io/assets/img/og.png">
     <meta name="description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
     <meta name="og:description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
+    <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
   </head>
   <body>
     {% include header %}
