--- a/src/_layouts/content.liquid
+++ b/src/_layouts/content.liquid
@@ -2,47 +2,12 @@
 layout: base
 ---
 
-<h1>{{title}}</h1>
+<div id="content-page">
 
-<article>
-  {{content}}
-</article>
+  <h1>{{title}}</h1>
 
-<style>
-h1 {
-  margin: 1.5em 0 1em;
-  color: var(--pink);
-}
-article {
-  max-width: 700px;
-  margin-bottom: 4em;
-}
+  <article>
+    {{content}}
+  </article>
 
-article p {
-  margin-top: 1em;
-}
-
-article ul {
-  margin-bottom: 1em;
-}
-
-article li {
-  margin-left: 1.5em;
-  margin-top: 0.5em;
-}
-
-article a {
-  color: inherit;
-}
-
-article h3 {
-  margin-top: 1em;
-  margin-bottom: -1em;
-}
-
-h2 {
-  margin: 1rem 0;
-  color: var(--blue);
-  font-family: 'IBM Plex Sans', sans-serif;
-}
-</style>
+</div>
