--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<div id="talk">
+<div id="talk-page">
   <div id="top">
     <h1>{{talk.title}}</h1>
     <p>Presented by {{speaker.name}} at {{event}}</p>
@@ -38,91 +38,3 @@ layout: base
     </aside>
   </main>
 </div>
-
-<style>
-#top {
-  text-align: center;
-  margin-top: 2em;
-}
-#top h1 {
-  color: var(--pink);
-  font-size: 3em;
-}
-#top p {
-  font-size: 1.25em;
-  margin-top: 1rem;
-}
-
-#talk iframe {
-  margin-top: 2.5rem;
-  width: 100%;
-  height: 600px;
-}
-
-#talk main {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-gap: 2em;
-  margin-top: 2em;
-}
-
-#talk main small {
-  display: block;
-  margin-top: 1em;
-  font-size: 1rem;
-  opacity: 0.8;
-}
-
-#talk main a {
-  color: inherit;
-}
-
-#talk main p {
-  margin-top: 1em;
-}
-
-#talk aside section {
-  background: white;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-radius: 0.5em;
-  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
-}
-
-#talk aside a {
-  color: var(--blue);
-}
-
-#talk .abstract {
-  margin-bottom: 1em;
-}
-
-@media screen and (max-width: 1000px) {
-  #talk iframe {
-    height: 56vw;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  #top h1 {
-    font-size: 2em;
-  }
-  #talk iframe {
-    margin-top: 2em;
-  }
-  #talk main {
-    grid-template-columns: 1fr;
-    grid-template-areas: 'meta' 'transcripts';
-  }
-  #talk main article {
-    grid-area: transcripts;
-  }
-  #talk aside {
-    grid-area: meta;
-  }
-  #talk aside section {
-    margin-bottom: 0;
-    margin-top: 1em;
-  }
-}
-</style>
