--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,56 +1,20 @@
-:root {
-  --pink: #dd6f73;
-  --pink__light: #f9e0e1;
-  --blue: #5853C5;
-  --blue__light: #6c66ce;
-  --blue__dark: #322ca9;
-  --sky: #C2E4EF;
-  --orange: #FFE8BE;
-  --dark: #2C2A3C;
-  --grey: #5F6C7B;
-}
+@import 'vars';
+@import 'base';
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import 'home_past';
+@import 'home_photos';
+@import 'home_sponsors';
+@import 'home_top';
+@import 'home_upcoming';
 
-body {
-  font-family: 'EB Garamond', serif;
-  background: #d9e2e8;
-  color: var(--dark);
-  line-height: 1.5;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
+@import 'tag_list';
+@import 'talk_tile';
+@import 'talks_list';
 
-.page.wrapper {
-  margin-bottom: 2em;
-  flex: 1;
-}
+@import 'photos';
+@import 'content';
+@import 'tag';
+@import 'talk';
 
-.wrapper {
-  max-width: 1080px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
-.wrapper .wrapper {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-h1 {
-  font-weight: 700;
-  font-family: 'IBM Plex Sans', sans-serif;
-}
-
-@media screen and (max-width: 1080px) {
-  .wrapper {
-    max-width: 100%;
-  }
-}
+@import 'header';
+@import 'footer';
