Fonts now all in vars

--- a/src/assets/scss/_content.scss
+++ b/src/assets/scss/_content.scss
@@ -32,5 +32,5 @@
 #content-page h2 {
   margin: 1rem 0;
   color: var(--blue);
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header)
 }
