--- a/src/assets/scss/_home_upcoming.scss
+++ b/src/assets/scss/_home_upcoming.scss
@@ -1,6 +1,6 @@
 #home-upcoming h1 {
   margin: 2rem 0 1rem;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header);
   color: var(--pink);
   font-size: 2rem;
 }
@@ -17,7 +17,7 @@
 }
 
 #home-upcoming .event h2 {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header);
 }
 
 #home-upcoming a {
