--- a/src/assets/scss/_photos.scss
+++ b/src/assets/scss/_photos.scss
@@ -10,7 +10,7 @@
 }
 
 #photo-page .event h2 {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header);
 }
 
 #photo-page .photos {
