--- a/src/assets/scss/_talks_list.scss
+++ b/src/assets/scss/_talks_list.scss
@@ -1,6 +1,6 @@
 #talks-list h1 {
   margin: 3rem 0 1rem;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header);
   color: var(--pink);
   font-size: 2rem;
 }
