--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -8,4 +8,7 @@
   --orange: #FFE8BE;
   --dark: #2C2A3C;
   --grey: #5F6C7B;
+
+  --font__body: 'EB Garamond', serif;
+  --font__header: 'IBM Plex Sans', sans-serif;
 }
