--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'EB Garamond', serif;
+  font-family: var(--font__body);
   background: #d9e2e8;
   color: var(--dark);
   line-height: 1.5;
@@ -34,7 +34,7 @@ body {
 
 h1 {
   font-weight: 700;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header)
 }
 
 @media screen and (max-width: 1080px) {
