--- a/src/assets/scss/_home_past.scss
+++ b/src/assets/scss/_home_past.scss
@@ -1,6 +1,6 @@
 #past h1 {
   margin: 2rem 0 1rem;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header);
   color: var(--pink);
   font-size: 2rem;
 }
@@ -17,6 +17,6 @@
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
 }
 #past .name {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header);
   display: block;
 }
