--- a/src/assets/scss/_home_sponsors.scss
+++ b/src/assets/scss/_home_sponsors.scss
@@ -1,6 +1,6 @@
 #sponsors h1 {
   margin: 2rem 0 1rem;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: var(--font__header);
   color: var(--pink);
   font-size: 2rem;
 }
