Added mux text below video player

--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -8,7 +8,11 @@ layout: base
     <p>Presented by {{speaker.name}} at {{event}}</p>
   </div>
 
-  <video id='video' controls playsinline preload="metadata"></video>
+  <div class='video-container'>
+    <video id='video' controls playsinline preload="metadata"></video>
+    <p style="text-align: right">Video hosting kindly provided by <a href="https://mux.com/" style="color: var(--blue)">Mux - video for developers</a>.</p>
+  </div>
+  
 
   <main>
     <article>
