--- a/src/assets/scss/_talk.scss
+++ b/src/assets/scss/_talk.scss
@@ -11,10 +11,11 @@
   margin-top: 1rem;
 }
 
-#talk-page iframe {
+#talk-page .plyr {
   margin-top: 2.5rem;
   width: 100%;
-  height: 600px;
+  height: 590px;
+  --plyr-color-main: var(--pink)
 }
 
 #talk-page main {
@@ -56,7 +57,7 @@
 }
 
 @media screen and (max-width: 1000px) {
-  #talk-page iframe {
+  #talk-page .plyr {
     height: 56vw;
   }
 }
@@ -65,7 +66,7 @@
   #talk-page #top h1 {
     font-size: 2em;
   }
-  #talk-page iframe {
+  #talk-page .plyr {
     margin-top: 2em;
   }
   #talk-page main {
