--- a/src/assets/scss/_talk.scss
+++ b/src/assets/scss/_talk.scss
@@ -11,11 +11,11 @@
   margin-top: 1rem;
 }
 
-#talk-page .plyr {
+#talk-page video {
   margin-top: 2.5rem;
   width: 100%;
   height: 590px;
-  --plyr-color-main: var(--pink)
+  background: white;
 }
 
 #talk-page main {
@@ -48,6 +48,11 @@
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
 }
 
+#talk-page aside section h2,
+#talk-page main article h2 {
+  font-family: var(--font__header);
+}
+
 #talk-page aside a {
   color: var(--blue);
 }
@@ -56,9 +61,19 @@
   margin-bottom: 1em;
 }
 
+#talk-page .video-container small {
+  display: block; 
+  text-align: right;
+  font-family: var(--font__header)
+}
+
+#talk-page .video-container a {
+  color: var(--blue)
+}
+
 @media screen and (max-width: 1000px) {
-  #talk-page .plyr {
-    height: 56vw;
+  #talk-page video {
+    height: 52vw;
   }
 }
 
@@ -66,7 +81,7 @@
   #talk-page #top h1 {
     font-size: 2em;
   }
-  #talk-page .plyr {
+  #talk-page video {
     margin-top: 2em;
   }
   #talk-page main {
