one column for psat events on mobile

--- a/src/assets/scss/_home_past.scss
+++ b/src/assets/scss/_home_past.scss
@@ -20,3 +20,9 @@
   font-family: var(--font__header);
   display: block;
 }
+
+@media screen and (max-width: 800px) {
+  #past ul {
+    grid-template-columns: 1fr;
+  }
+}
