Using nested selectors

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,84 +1,73 @@
 header {
   width: 100%;
-}
-
-header * {
-  color: white;
-  text-decoration: none;
-}
-
-header #mobile {
-  display: none;
-}
-
-header #primary {
-  background: var(--blue__dark);
-  padding: 0.5em 0.75em;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-
-header #primary span {
-  margin-right: auto;
-}
-
-header #primary a {
-  margin-left: 1em;
-}
-
-header #secondary {
-  background: var(--blue);
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-header #secondary a.main {
-  font-family: var(--font__header)
-}
-
-header #secondary > * {
-  border-right: 1px solid var(--blue__light);
-  padding: 0.75em 1em;
-}
-
-header #secondary a:last-child {
-  border-right: 0;
-}
-
-header .m {
-  display: none;
-}
-
-@media screen and (max-width: 800px) {
-  header .m {
-    display: block;
+  * {
+    color: white;
+    text-decoration: none;
   }
-  header #mobile {
+  #mobile, .m {
+    display: none;
+  }
+
+  #primary {
     background: var(--blue__dark);
     padding: 0.5em 0.75em;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
+    span {
+      margin-right: auto;
+    }
+    a {
+      margin-left: 1em;
+    }
   }
-  header #mobile a {
-    font-family: var(--font__header)
+
+  #secondary {
+    background: var(--blue);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    a.main {
+      font-family: var(--font__header)
+    }
+    > * {
+      border-right: 1px solid var(--blue__light);
+      padding: 0.75em 1em;
+    }
+    a:last-child {
+      border-right: 0;
+    }
   }
-  header #mobile span {
-    cursor: pointer;
-  }
-  header #primary,
-  header #secondary,
-  header #secondary a.main {
-    display: none;
-  }
-  
-  header .on {
-    display: block !important;
-  }
-  header #secondary > * {
-    border: none;
-    display: block;
+
+  @media screen and (max-width: 800px) {
+    .m {
+      display: block;
+    }
+    #mobile {
+      background: var(--blue__dark);
+      padding: 0.5em 0.75em;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      a {
+        font-family: var(--font__header)
+      }
+      span {
+        cursor: pointer;
+      }
+    }
+    #primary,
+    #secondary,
+    #secondary a.main {
+      display: none;
+    }
+    
+    .on {
+      display: block !important;
+    }
+    #secondary > * {
+      border: none;
+      display: block;
+    }
   }
 }
