--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -14,22 +14,20 @@ body {
   flex-direction: column;
 }
 
-.page.wrapper {
-  margin-bottom: 2em;
-  flex: 1;
-}
-
 .wrapper {
   max-width: 1080px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 1em;
   padding-right: 1em;
-}
-
-.wrapper .wrapper {
-  padding-left: 0;
-  padding-right: 0;
+  &.page {
+    margin-bottom: 2em;
+    flex: 1;
+  }
+  .wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 h1 {
