--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -3,7 +3,7 @@ footer {
   color: white;
   padding: 0.5em;
   text-align: center;
-}
-footer a {
-  color: inherit;
+  a {
+    color: inherit;
+  }
 }
