--- a/src/assets/scss/_home_sponsors.scss
+++ b/src/assets/scss/_home_sponsors.scss
@@ -1,44 +1,40 @@
-#sponsors h1 {
-  margin: 2rem 0 1rem;
-  font-family: var(--font__header);
-  color: var(--pink);
-  font-size: 2rem;
-}
-#sponsors .list {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 0.5em;
-  background: white;
-  padding: 1em;
-  border-radius: 0.5em;
-  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
-}
-#sponsors img {
-  display: block;
-  width: 100%;
-}
-
-#sponsors img:first-child {
-  border-top-left-radius: 0.3em;
-}
-#sponsors img:nth-child(5) {
-  border-top-right-radius: 0.3em;
-}
-#sponsors img:nth-last-child(5) {
-  border-bottom-left-radius: 0.3em;
-}
-#sponsors img:last-child {
-  border-bottom-right-radius: 0.3em;
-}
-
-
-@media screen and (max-width: 1000px) {
-  #sponsors .list {
-    grid-template-columns: repeat(4, 1fr);
+#sponsors {
+  h1 {
+    margin: 2rem 0 1rem;
+    font-family: var(--font__header);
+    color: var(--pink);
+    font-size: 2rem;
+  }
+  .list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 0.5em;
+    background: white;
+    padding: 1em;
+    border-radius: 0.5em;
+    box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
+    @media screen and (max-width: 1000px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+    @media screen and (max-width: 800px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  img {
+    display: block;
+    width: 100%;
+    &:first-child {
+      border-top-left-radius: 0.3em;
+    }
+    &:nth-child(5) {
+      border-top-right-radius: 0.3em;
+    }
+    &:nth-last-child(5) {
+      border-bottom-left-radius: 0.3em;
+    }
+    &:last-child {
+      border-bottom-right-radius: 0.3em;
+    }
   }
 }
-@media screen and (max-width: 800px) {
-  #sponsors .list {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
+
