--- a/src/assets/scss/_talk_tile.scss
+++ b/src/assets/scss/_talk_tile.scss
@@ -8,24 +8,18 @@
   border-radius: 0.5em;
   box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
   width: 100%;
-}
-
-.talk-tile h2 {
-  font-family: var(--font__header);
-  font-size: 1.25em;
-}
-
-.talk-tile p {
-  margin: 0.5rem 0 0.5rem;
-}
-
-.talk-tile small {
-  font-size: 1em;
-  color: rgba(0, 0, 0, 0.5);
-}
-
-@media screen and (max-width: 800px) {
-  .talk-tile p {
-    display: none;
+  h2 {
+    font-family: var(--font__header);
+    font-size: 1.25em;
+  }
+  p {
+    margin: 0.5rem 0 0.5rem;
+    @media screen and (max-width: 800px) {
+      display: none;
+    }
+  }
+  small {
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.5);
   }
 }
