--- a/src/assets/scss/_talks_list.scss
+++ b/src/assets/scss/_talks_list.scss
@@ -1,16 +1,15 @@
-#talks-list h1 {
-  margin: 3rem 0 1rem;
-  font-family: var(--font__header);
-  color: var(--pink);
-  font-size: 2rem;
-}
-
-#talks-list .list {
-  columns: 2;
-}
-
-@media screen and (max-width: 800px) {
-  #talks-list .list {
-    columns: 1;
+#talks-list {
+  h1 {
+    margin: 3rem 0 1rem;
+    font-family: var(--font__header);
+    color: var(--pink);
+    font-size: 2rem;
+  }
+  .list {
+    columns: 2;
+    @media screen and (max-width: 800px) {
+      columns: 1;
+    }
   }
 }
+
