--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -7,6 +7,7 @@
     <span>Core skill conferences, run with love.</span>
     <a href="/conduct">Code of Conduct</a>
     <a href="/run">Run Your Own</a>
+    <a href="/feed.xml">RSS</a>
   </div>
   <div id="secondary">
     <a href="/" class="main">You Got This</a>
