Performance & Best Practices at 100

--- a/src/_includes/home_photos.liquid
+++ b/src/_includes/home_photos.liquid
@@ -2,7 +2,7 @@
   <div class="reel">
     <div class="reel-l">
       {% for i in (1..10) %}
-        <img src="/assets/img/homepage/{{i}}.jpg">
+        <img data-src="/assets/img/homepage/{{i}}.jpg" class='lazyload'>
       {% endfor %}
     </div>
   </div>
