--- a/src/_includes/home_sponsors.liquid
+++ b/src/_includes/home_sponsors.liquid
@@ -2,7 +2,7 @@
   <h1>Sponsors of Upcoming & Past Events</h1>
   <div class='list'>
     {% for sponsor in sponsors %}
-      <img src='/assets/img/sponsors/{{sponsor}}.png'>
+      <img data-src='/assets/img/sponsors/{{sponsor}}.png' class='lazyload'>
     {% endfor %}
   </div>
 </div>
