--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -43,7 +43,7 @@ layout: base
   </main>
 </div>
 
-<script src="/assets/hls.js"></script>
+<script src="/assets/js/hls.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const source = 'https://stream.mux.com/{{video}}.m3u8'
