--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -24,5 +24,6 @@
       {{content | safe}}
     </div>
     {% include footer %}
+    <script src="/assets/js/lazysizes.js"></script>
   </body>
 </html>
