Accessibility maxed except alt tags

--- a/src/_includes/home_photos.liquid
+++ b/src/_includes/home_photos.liquid
@@ -1,4 +1,4 @@
-<div id="highlights" aria-hidden="true">
+<div id="highlights">
   <div class="reel">
     <div class="reel-l">
       {% for i in (1..10) %}
