--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -6,7 +6,7 @@
 
 body {
   font-family: var(--font__body);
-  background: #d9e2e8;
+  background: var(--body__color);
   color: var(--dark);
   line-height: 1.5;
   display: flex;
