--- a/src/assets/scss/_content.scss
+++ b/src/assets/scss/_content.scss
@@ -1,12 +1,12 @@
 #content-page {
   h1 {
     margin: 1.5em 0 1em;
-    color: var(--pink);
+    color: var(--secondary);
   }
   
   h2 {
     margin: 1rem 0;
-    color: var(--blue);
+    color: var(--primary);
     font-family: var(--font__header)
   }
   
