--- a/src/assets/scss/_home_upcoming.scss
+++ b/src/assets/scss/_home_upcoming.scss
@@ -2,7 +2,7 @@
   h1 {
     margin: 2rem 0 1rem;
     font-family: var(--font__header);
-    color: var(--pink);
+    color: var(--secondary);
     font-size: 2rem;
   }
   a {
@@ -12,7 +12,7 @@
     margin-top: 1em;
   }
   .event {
-    background: var(--blue);
+    background: var(--primary);
     padding: 1em;
     color: white;
     border-radius: 0.5em;
