--- a/src/assets/scss/_photos.scss
+++ b/src/assets/scss/_photos.scss
@@ -1,7 +1,7 @@
 #photo-page {
   h1 {
     margin: 1.5em 0 1em;
-    color: var(--pink);
+    color: var(--secondary);
   }
   img {
     width: 100%;
