--- a/src/assets/scss/_tag_list.scss
+++ b/src/assets/scss/_tag_list.scss
@@ -1,7 +1,6 @@
 .tag {
   display: inline-block;
-  background: slategrey;
-  color: white;
+  background: var(--secondary__light);
   padding: 0.25em 0.5em;
   font-size: 0.8em;
   margin: 0.5em 0.25em 0 0;
