--- a/src/assets/scss/_home_past.scss
+++ b/src/assets/scss/_home_past.scss
@@ -2,7 +2,7 @@
   h1 {
     margin: 2rem 0 1rem;
     font-family: var(--font__header);
-    color: var(--pink);
+    color: var(--secondary);
     font-size: 2rem;
   }
   ul {
@@ -15,7 +15,7 @@
     }
   }
   li {
-    background: var(--pink__light);
+    background: white;
     padding: 1em;
     border-radius: 0.5em;
     box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
