--- a/src/assets/scss/_home_sponsors.scss
+++ b/src/assets/scss/_home_sponsors.scss
@@ -2,7 +2,7 @@
   h1 {
     margin: 2rem 0 1rem;
     font-family: var(--font__header);
-    color: var(--pink);
+    color: var(--secondary);
     font-size: 2rem;
   }
   .list {
