--- a/src/assets/scss/_tag.scss
+++ b/src/assets/scss/_tag.scss
@@ -1,7 +1,7 @@
 #tag-page {
   h1 {
     margin: 1.5em 0 1em;
-    color: var(--pink);
+    color: var(--secondary);
     span {
       text-transform: uppercase;
     }
