--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -1,3 +1,13 @@
 <footer>
-  <p>You Got This is a community conference series coordinated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>. Code for this site is on <a href="https://github.com/yougotthisconf/yougotthis.io">GitHub</a>.</p>
+  <div class='left'>
+    <p>You Got This is a network of community conferences focused on core, non-technical skills. It is coordinated by <a href="https://twitter.com/_phzn">Kevin Lewis</a> with events currently run by Kevin, Markela, Amy, Katie, Benjamin and Shy.</p>
+    <a href="https://github.com/yougotthisconf/yougotthis.io">Code on GitHub</a>
+  </div>
+  <div class="right">
+    <a href="/tags/you-got-this-london-2019/">You Got This London 2019 Talks</a>
+    <a href="/tags/you-got-this-birmingham-2020/">You Got This Birmingham 2020 Talks</a>
+    <a href="/tags/you-got-this-2020-from-home/">You Got This 2020 From Home Talks</a>
+    <a href="/run/">Run Your Own You Got This Event</a>
+    <a href="mailto:kevin@yougotthis.io">Interested in Sponsoring?</a>
+  </div>
 </footer>
