--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -2,8 +2,47 @@ footer {
   background: var(--blue);
   color: white;
   padding: 0.5em;
-  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2em;
+  line-height: 1.5;
+  > * {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .left {
+    text-align: left;
+    p {
+      margin-bottom: 1em;
+      font-family: var(--font__header);
+    }
+  }
+  .right {
+    text-align: right;
+    a {
+      display: block;
+      line-height: 2;
+    }
+  }
   a {
     color: inherit;
+    text-decoration: none;
+  }
+  @media screen and (max-width: 800px) {
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+    .left {
+      text-align: center;
+    }
+    .right {
+      * {
+        display: none !important;
+      }
+      a:last-child {
+        display: block !important;
+        text-align: center;
+      }
+    }
   }
 }
